--- a/react/public/app.css
+++ b/react/public/app.css
@@ -3,6 +3,16 @@
     padding: 0;
     margin: 0;
 }
+.edr_create .navbar-custom{
+    position: static;
+}
+.edr_create_main{
+    width: 100%;
+    height: 100vh;
+    padding: 50px 150px;
+    background: #fff;
+    position: fixed;
+}
 .auth-user-testimonial{
     bottom: 8rem;
 }
