--- a/react/public/app.css
+++ b/react/public/app.css
@@ -6,6 +6,16 @@
 .edr_create .navbar-custom{
     position: static;
 }
+.referal_registration{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    overflow-y:scroll;
+}
+.referal_registration .content-page{
+    margin-left: 100px;
+}
 .edr_create_main{
     width: 100%;
     height: 100vh;
