--- a/react/public/app.css
+++ b/react/public/app.css
@@ -13,6 +13,24 @@
     background: #fff;
     overflow-y:scroll;
 }
+.latest-leads{
+    margin-top: 50px;
+    background: #fff;
+    padding: 25px 15px;
+    width: 49%;
+    margin-right: 1%;
+    padding-bottom: 0px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+}
+.email-communication{
+    background: #fff !important;
+    padding-top: 35px;
+}
+.email-communication h4{
+    margin-left: 15px;
+    margin-bottom: 35px;
+}
 .referal_registration .content-page{
     margin-left: 100px;
 }
