--- a/react/public/app.css
+++ b/react/public/app.css
@@ -3,6 +3,23 @@
     padding: 0;
     margin: 0;
 }
+.applicant-table select{
+    width: 200px;
+}
+.modal.fade{
+    background: rgba(0,0,0,.75);
+    transition: all .2s;
+}
+.show{
+    display: block;
+}
+.note-button{
+    background: #fff !important;
+    border-top: 1px solid #cecece;
+}
+.modal-dialog {
+    max-width: 800px;
+}
 .edr_create .navbar-custom{
     position: static;
 }
@@ -31,6 +48,7 @@
 }
 .email-communication{
     background: #fff !important;
+    padding-bottom: 35px;
     padding-top: 35px;
 }
 .email-communication h4{
